feat(school): The grade_exam has been implemented

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
     "        \"school show_list\": \"Show the list of schools in the system\",\n",
     "        \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
     "        \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Add an exam to a specific course at school.\",\n",
-    "        # \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Grade an exam that the client has taken in a course.\",\n",
+    "        \"school grade_exam <school_name> <course_name> <client_name> <exam_name> <grade>\": \"Grade an exam that the client has taken in a course.\",\n",
     "        \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
     "        \"school show_exams <school_name> <course_name>\": \"Show the list of exams available for a course at the school.\",\n",
     "        \"school remove_school <school_name>\": \"Removes the school from the agents.\",\n",
@@ -441,8 +441,33 @@
     "        else:\n",
     "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
-    "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
-    "        pass\n",
+    "    def grade_exam(self, course_name, client_name, exam_name, grade):\n",
+    "        if client_name not in self.students:\n",
+    "            print(f\"The student '{client_name}' is not enrolled in school '{self.name}'.\")\n",
+    "            return\n",
+    "        \n",
+    "        try:\n",
+    "            float(grade)\n",
+    "        except ValueError:\n",
+    "            print(f\"The grade '{grade}' is not valid. It must be a number.\")\n",
+    "            return\n",
+    "        \n",
+    "        course = self.getCourse(course_name)\n",
+    "        if course:\n",
+    "            exam = course.getExam(exam_name)\n",
+    "            if exam:\n",
+    "                if client_name in exam.exams_student:\n",
+    "                    if float(grade) >= 0 and float(grade) <= 10:\n",
+    "                        exam.exams_student[client_name] = grade\n",
+    "                        print(f\"The exam '{exam.name}' has been graded with '{grade}' for the student '{client_name}'.\")   \n",
+    "                    else:\n",
+    "                        print(f\"The grade '{grade}' is not valid. It must be between 0 and 10.\")\n",
+    "                else:\n",
+    "                    print(f\"The student '{client_name}' has not taken the exam '{exam.name}'.\")\n",
+    "            else:\n",
+    "                print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
+    "        else:\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def remove_exam_from_course(self, course_name, exam_name):\n",
     "        course = self.getCourse(course_name)\n",
@@ -505,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -532,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -553,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -705,6 +730,13 @@
     "                    if school:\n",
     "                        school.add_exam_to_course(course_name, exam_name)\n",
     "            \n",
+    "            elif parts[1] == 'grade_exam':\n",
+    "                if self.validate_command(parts, 7, \"invalid_format\", \"school grade_exam <school_name> <course_name> <client_name> <exam_name> <grade>\"):\n",
+    "                    _, _, school_name, course_name, client_name, exam_name, grade = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.grade_exam(course_name, client_name, exam_name, grade)\n",
+    "            \n",
     "            elif parts[1] == 'remove_exam_from_course':\n",
     "                if self.validate_command(parts, 5, \"invalid_format\", \"school remove_exam_from_course <school_name> <course_name> <exam_name>\"):\n",
     "                    _, _, school_name, course_name, exam_name = parts\n",
@@ -801,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -834,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -879,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -898,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -908,6 +940,9 @@
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
       "\n",
+      "Client Billy\" added to the system.\n",
+      "Client 'Billy\"' added to the system.\n",
+      "\n",
       "Client Billy added to the system.\n",
       "Client 'Billy' added to the system.\n",
       "\n",
@@ -916,21 +951,23 @@
       "Client 'Billy' has been enrolled in school 'EOI'.\n",
       "Course 'Python' has been created in school 'EOI'.\n",
       "Billy joined the enrollment queue for Python in EOI.\n",
-      "The student 'Billy' has been admitted to the course 'Python'.\n"
+      "The student 'Billy' has been admitted to the course 'Python'.\n",
+      "The exam 'Chapter01' has been added to course 'Python'.\n",
+      "The exam 'Chapter01' has been taken by the student 'Billy'.\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'append'",
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'int'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[66], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      3\u001b[0m     simulation \u001b[38;5;241m=\u001b[39m CitySimulation()\n\u001b[1;32m----> 4\u001b[0m     \u001b[43msimulation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommand_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[62], line 54\u001b[0m, in \u001b[0;36mCitySimulation.command_loop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m command \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[62], line 146\u001b[0m, in \u001b[0;36mCitySimulation.process_command\u001b[1;34m(self, command)\u001b[0m\n\u001b[0;32m    144\u001b[0m         school \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_agent_or_error(school_name, School, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool_not_found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    145\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m school:\n\u001b[1;32m--> 146\u001b[0m             \u001b[43mschool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_exam_to_course\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcourse_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexam_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    148\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m parts[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mremove_exam_from_course\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    149\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidate_command(parts, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minvalid_format\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool remove_exam_from_course <school_name> <course_name> <exam_name>\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
-      "Cell \u001b[1;32mIn[59], line 115\u001b[0m, in \u001b[0;36mSchool.add_exam_to_course\u001b[1;34m(self, course_name, exam_name)\u001b[0m\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    114\u001b[0m         new_exam \u001b[38;5;241m=\u001b[39m Exam(exam_name)\n\u001b[1;32m--> 115\u001b[0m         \u001b[43mcourse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexams\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(new_exam)\n\u001b[0;32m    116\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe exam \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_exam\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m has been added to course \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcourse_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'append'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      3\u001b[0m     simulation \u001b[38;5;241m=\u001b[39m CitySimulation()\n\u001b[1;32m----> 4\u001b[0m     \u001b[43msimulation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommand_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[18], line 54\u001b[0m, in \u001b[0;36mCitySimulation.command_loop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m command \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[18], line 153\u001b[0m, in \u001b[0;36mCitySimulation.process_command\u001b[1;34m(self, command)\u001b[0m\n\u001b[0;32m    151\u001b[0m         school \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_agent_or_error(school_name, School, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool_not_found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    152\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m school:\n\u001b[1;32m--> 153\u001b[0m             \u001b[43mschool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrade_exam\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcourse_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclient_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexam_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    155\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m parts[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mremove_exam_from_course\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    156\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidate_command(parts, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minvalid_format\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool remove_exam_from_course <school_name> <course_name> <exam_name>\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[15], line 130\u001b[0m, in \u001b[0;36mSchool.grade_exam\u001b[1;34m(self, course_name, client_name, exam_name, grade)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m exam:\n\u001b[0;32m    129\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m client_name \u001b[38;5;129;01min\u001b[39;00m exam\u001b[38;5;241m.\u001b[39mexams_student:\n\u001b[1;32m--> 130\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mgrade\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m \u001b[38;5;129;01mand\u001b[39;00m grade \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[0;32m    131\u001b[0m             exam\u001b[38;5;241m.\u001b[39mexams_student[client_name] \u001b[38;5;241m=\u001b[39m grade\n\u001b[0;32m    132\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe exam \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexam\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m has been graded with \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrade\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m for the student \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mclient_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)   \n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
      ]
     }
    ],
