feat(school):  The show_enrollment_queue command has been implemented

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -334,7 +334,7 @@
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
     "        \"school create_course <course_name> <school_name>\": \"Create a new course at school.\",\n",
     "        \"school show_students <school_name>\": \"Show the list of all students registered at school.\",\n",
-    "        \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
+    "        \"school show_enrollment_queue <school_name> <course_name>\": \"Show the enrollment queue for the course.\",\n",
     "        \"school admit_student_from_queue <school_name> <course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
     "        \"school show_courses <school_name>\": \"Show the available courses at school.\",\n",
     "        \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
@@ -366,13 +366,17 @@
     "            for student in self.students:\n",
     "                print(f\"- {student}\")\n",
     "    \n",
-    "    def show_enrollment_queue(self):\n",
-    "        if not self.courses_client_queue:\n",
-    "            print(f\"No students in the enrollment queue for school '{self.name}'.\")\n",
+    "    def show_enrollment_queue(self, course_name):\n",
+    "        course = self.getCourse(course_name)\n",
+    "        if course:\n",
+    "            if course.enrollment_queue.is_empty():\n",
+    "                print(f\"The enrollment queue for course '{course_name}' in school '{self.name}' is empty.\")\n",
+    "            else:\n",
+    "                print(f\"Enrollment queue for course '{course_name}' in school '{self.name}':\")\n",
+    "                for student in course.enrollment_queue.queue:\n",
+    "                    print(f\"- {student}\")\n",
     "        else:\n",
-    "            print(f\"Enrollment queue for school '{self.name}':\")\n",
-    "            for course, student in self.courses_client_queue:\n",
-    "                print(f\"- {student} (Course: {course})\") \n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def admit_student_from_queue(self, course_name):\n",
     "        course = self.getCourse(course_name)\n",
@@ -578,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -683,6 +687,13 @@
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.create_course(course_name)     \n",
+    "                    \n",
+    "            elif   parts[1] == 'show_students':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_students <school_name>\"):\n",
+    "                    _, _, school_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.show_students()     \n",
     "\n",
     "            elif   parts[1] == 'show_courses':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_courses <school_name>\"):\n",
@@ -696,11 +707,11 @@
     "                    self.agent_manager.list_agents(School)                     \n",
     "            \n",
     "            elif parts[1] == 'show_enrollment_queue':\n",
-    "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_enrollment_queue <school_name>\"):\n",
-    "                    _, _, school_name = parts\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"school show_enrollment_queue <school_name> <course_name>\"):\n",
+    "                    _, _, school_name, course_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
-    "                        school.show_enrollment_queue()\n",
+    "                        school.show_enrollment_queue(course_name)\n",
     "            \n",
     "            elif parts[1] == 'admit_student_from_queue':\n",
     "                if self.validate_command(parts, 4, \"invalid_format\", \"school admit_student_from_queue <school_name> <course_name>\"):\n",
