feat(School): The open/close unit test has been added

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -253,25 +253,26 @@
     "\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
-    "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
-    "            if school:\n",
-    "                if self.name in school.students:\n",
-    "                    course = school.getCourse(course_name)\n",
-    "                    if course:\n",
-    "                        if self.name in course.students:\n",
-    "                            print(f\"{self.name} is already enrolled in {course_name} at {school_name}.\")\n",
-    "                        else:\n",
-    "                            if self.name in course.enrollment_queue.queue:\n",
-    "                                print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
-    "                            else:\n",
-    "                                course.enrollment_queue.enqueue(self.name)\n",
-    "                                print(f\"{self.name} joined the enrollment queue for {course_name} in {school_name}.\")\n",
+    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "        \n",
+    "        if school: \n",
+    "            if self.name in school.students:\n",
+    "                course = school.getCourse(course_name)\n",
+    "                if course:\n",
+    "                    if self.name in course.students:\n",
+    "                        print(f\"{self.name} is already enrolled in {course_name} at {school_name}.\")\n",
     "                    else:\n",
-    "                        print(f\"{course_name} is not available in {school_name}.\")\n",
+    "                        if self.name in course.enrollment_queue.queue:\n",
+    "                            print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
+    "                        else:\n",
+    "                            course.enrollment_queue.enqueue(self.name)\n",
+    "                            print(f\"{self.name} joined the enrollment queue for {course_name} in {school_name}.\")\n",
     "                else:\n",
-    "                    print(f\"Client '{self.name}' not enrolled in school '{school.name}\")\n",
+    "                    print(f\"{course_name} is not available in {school_name}.\")\n",
     "            else:\n",
-    "                print(f\"School '{school_name}' do not exist.\")\n",
+    "                print(f\"Client '{self.name}' not enrolled in school '{school.name}\")\n",
+    "        else:\n",
+    "            print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
     "        pass\n",
@@ -280,7 +281,12 @@
     "        if not self.school_stack.is_empty():\n",
     "            school_name = self.school_stack.peek()\n",
     "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "            \n",
     "            if school:\n",
+    "                if school.is_open == False:\n",
+    "                    print(f\"The school '{school_name}' is closed. Cannot take exams.\")\n",
+    "                    return\n",
+    "                \n",
     "                course = school.getCourse(course_name)\n",
     "                if course:\n",
     "                    exam = course.getExam(exam_name)\n",
@@ -327,7 +333,7 @@
     "        super().__init__(name)\n",
     "        self.students = {}  \n",
     "        self.courses = {}\n",
-    "        self.is_open = True \n",
+    "        self.is_open = False \n",
     "        self.agent_manager = AgentManager() \n",
     "\n",
     "    HELP_MESSAGES = {\n",
@@ -534,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -561,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -729,10 +735,10 @@
     "                        \n",
     "            elif parts[1] in ('open', 'close'):\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school open/close <school_name>\"):\n",
-    "                    _, cmd, school_name = parts\n",
+    "                    _, action, school_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                if school:\n",
-    "                    school.set_status(school_name, cmd)\n",
+    "                    school.open_close(school_name, action)\n",
     "            \n",
     "            elif parts[1] == 'add_exam_to_course':\n",
     "                if self.validate_command(parts, 5, \"invalid_format\", \"school add_exam_to_course <school_name> <course_name> <exam_name>\"):\n",
@@ -844,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -877,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -922,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -941,47 +947,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting city simulation... Type 'q' to exit\n",
-      "\n",
-      "Client Billy\" added to the system.\n",
-      "Client 'Billy\"' added to the system.\n",
-      "\n",
-      "Client Billy added to the system.\n",
-      "Client 'Billy' added to the system.\n",
-      "\n",
-      "School EOI added to the system.\n",
-      "School 'EOI' added to the system.\n",
-      "Client 'Billy' has been enrolled in school 'EOI'.\n",
-      "Course 'Python' has been created in school 'EOI'.\n",
-      "Billy joined the enrollment queue for Python in EOI.\n",
-      "The student 'Billy' has been admitted to the course 'Python'.\n",
-      "The exam 'Chapter01' has been added to course 'Python'.\n",
-      "The exam 'Chapter01' has been taken by the student 'Billy'.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      3\u001b[0m     simulation \u001b[38;5;241m=\u001b[39m CitySimulation()\n\u001b[1;32m----> 4\u001b[0m     \u001b[43msimulation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommand_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[18], line 54\u001b[0m, in \u001b[0;36mCitySimulation.command_loop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m command \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[18], line 153\u001b[0m, in \u001b[0;36mCitySimulation.process_command\u001b[1;34m(self, command)\u001b[0m\n\u001b[0;32m    151\u001b[0m         school \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_agent_or_error(school_name, School, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool_not_found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    152\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m school:\n\u001b[1;32m--> 153\u001b[0m             \u001b[43mschool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrade_exam\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcourse_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclient_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexam_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    155\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m parts[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mremove_exam_from_course\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    156\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidate_command(parts, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minvalid_format\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool remove_exam_from_course <school_name> <course_name> <exam_name>\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
-      "Cell \u001b[1;32mIn[15], line 130\u001b[0m, in \u001b[0;36mSchool.grade_exam\u001b[1;34m(self, course_name, client_name, exam_name, grade)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m exam:\n\u001b[0;32m    129\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m client_name \u001b[38;5;129;01min\u001b[39;00m exam\u001b[38;5;241m.\u001b[39mexams_student:\n\u001b[1;32m--> 130\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mgrade\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m \u001b[38;5;129;01mand\u001b[39;00m grade \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[0;32m    131\u001b[0m             exam\u001b[38;5;241m.\u001b[39mexams_student[client_name] \u001b[38;5;241m=\u001b[39m grade\n\u001b[0;32m    132\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe exam \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexam\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m has been graded with \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrade\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m for the student \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mclient_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)   \n",
-      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
