feat(school): assit_course command and uni test have been added

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -275,7 +275,19 @@
     "            print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
-    "        pass\n",
+    "        school_name = self.school_stack.peek()\n",
+    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "\n",
+    "        if school:\n",
+    "            course = school.getCourse(course_name)\n",
+    "            if course:\n",
+    "                if self.name in course.students:\n",
+    "                    print(f\"{self.name} is already enrolled in {course_name}.\")\n",
+    "                else:\n",
+    "                    course.students.append(self.name)\n",
+    "                    print(f\"{self.name} is now enrolled in {course_name}.\")\n",
+    "            else:\n",
+    "                print(f\"{course_name} is not available in {school_name}.\")\n",
     "    \n",
     "    def take_exam(self, course_name, exam_name):\n",
     "        if not self.school_stack.is_empty():\n",
@@ -811,6 +823,13 @@
     "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
     "                    if client:\n",
     "                        client.join_enrollment_queue(school_name, course_name)\n",
+    "            elif parts[1] == 'assist_course':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"client assist_course <course_name>\"):\n",
+    "                    client_name, _, course_name = parts\n",
+    "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
+    "                if client:\n",
+    "                    client.assist_course(course_name)\n",
+    "\n",
     "            \n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"client show_list\"):\n",
